k8s/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: ecommerce
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
