k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ecommerce-api
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30081
